Эндпоинты для взаимодействия с фронтом
